--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
@@ -73,7 +73,7 @@
   register: ENABLE_AVX2
 
 - name: Set AVX512 copt flag
-  shell: if [[ ! -z '{{ HAVE_AVX512F.stdout }}' ]]; then echo "--copt=-mavx512f"; elif [[ ! -z '{{ HAVE_AVX512DQ }}' ]]; then echo "--copt=-mavx512dq"; elif [[ ! -z '{{ HAVE_AVX512CD }}' ]]; then echo "--copt=-mavx512cd"; else echo ""; fi
+  shell: if [[ ! -z '{{ HAVE_AVX512F.stdout }}' ]]; then echo "--copt=-mavx512f"; elif [[ ! -z '{{ HAVE_AVX512DQ.stdout }}' ]]; then echo "--copt=-mavx512dq"; elif [[ ! -z '{{ HAVE_AVX512CD.stdout }}' ]]; then echo "--copt=-mavx512cd"; else echo ""; fi
   register: ENABLE_AVX512
 
 - name: Set FMA copt flag
