Adding playbook for installing updated gcc version for RHEL 7 so that TensorFlow can use AVX512 instructions. Updating affected files and adding new AVX512 Dockerfile.

--- a/TensorFlow/OpenShift/templates/nfd/instance/job/cpu_manager/tensorflow-nfd-build-job.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instance/job/cpu_manager/tensorflow-nfd-build-job.yaml
@@ -23,7 +23,7 @@ objects:
         - name: "${APP_NAME}"
           image: "${REGISTRY}/${NAMESPACE}/${IMAGESTREAM_NAME}:latest"
           command: ["/usr/libexec/s2i/run"]
-          args: ["${RHEL_VERSION}", "cpu", "${NUM_CPUS}", " ", " "]
+          args: ["${RHEL_VERSION}", "cpu", "${NUM_CPUS}", "${CC}", " ", " "]
         restartPolicy: "Never"
         affinity:
           nodeAffinity:
@@ -81,4 +81,8 @@ parameters:
 - description: "Memory size"
   name: "MEMORY_SIZE"
   value: "1G"
+  required: true
+- description: "Path to gcc"
+  name: "CC"
+  value: "/usr/bin/gcc"
   required: true
