--- a/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx512/job/default/tensorflow-nfd-build-job.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx512/job/default/tensorflow-nfd-build-job.yaml
@@ -23,7 +23,7 @@ objects:
         - name: "${APP_NAME}"
           image: "${REGISTRY}/${NAMESPACE}/${IMAGESTREAM_NAME}:latest"
           command: ["/usr/libexec/s2i/run"]
-          args: ["${RHEL_VERSION}", "cpu", " "]
+          args: ["${RHEL_VERSION}", "cpu", "${NUM_CPUS}", "${CC}"]
         restartPolicy: "Never"
         affinity:
           nodeAffinity:
@@ -68,4 +68,13 @@ parameters:
   name: "RHEL_VERSION"
   from: '[0-9]{1}'
   value: "7"
+  required: true
+- description: "Number of CPUs to use (must be an integer)"
+  name: "NUM_CPUS"
+  from: '[0-9]{5}'
+  value: ""
+  required: false
+- description: "Path to gcc"
+  name: "CC"
+  value: "/usr/bin/gcc"
   required: true
