--- a/FFTW/playbooks/FFTW_installation/play.yaml
+++ b/FFTW/playbooks/FFTW_installation/play.yaml
@@ -8,6 +8,7 @@
     BUILD_DIR: '{{ build_dir | default("${HOME}/build") }}'
     INSTALL_DIR: '{{ install_dir | default("${HOME}/custom_fftw") }}'
     RHEL_VERSION: '{{ rhel_version | default("7") }}'
+    CC: '{{ cc | default("/usr/bin/gcc") }}'
 
   roles:
     # Creates necessary directories for building and installing FFTW
