--- a/TensorFlow/OpenShift/templates/nfd/instance/buildconfig/tensorflow-fftw-buildconfig-rhel7-avx512.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instance/buildconfig/tensorflow-fftw-buildconfig-rhel7-avx512.yaml
@@ -2,14 +2,14 @@ apiVersion: "v1"
 kind: "Template"
 metadata:
   annotations:
-    description: "Template to make a TensorFlow 'AVX512' build image using an FFTW NumPy"
-    tags: "tensorflow-fftw-avx512-build-image-rhel7"
-  name: "tensorflow-fftw-avx512-build-image-rhel7"
+    description: "Template to make a TensorFlow build image with an FFTW NumPy backend"
+    tags: "tensorflow-fftw-build-image-rhel7-avx512"
+  name: "tensorflow-fftw-build-image-rhel7-avx512"
 objects:
 - apiVersion: "v1"
   kind: "BuildConfig"
   metadata:
-    name: "tensorflow-fftw-avx512-build-image-rhel7" 
+    name: "tensorflow-fftw-build-image-rhel7-gpu" 
   spec:
     runPolicy: "Serial" 
     triggers: 
@@ -28,25 +28,8 @@ objects:
       to:
         kind: "ImageStreamTag"
         name: "${IMAGESTREAM_NAME}:latest"
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-          - matchExpressions:
-            - key: "feature.node.kubernetes.io/cpuid-AVX512BW"
-              operator: "Exists"
-          - matchExpressions:
-            - key: "feature.node.kubernetes.io/cpuid-AVX512CD"
-              operator: "Exists"
-          - matchExpressions:
-            - key: "feature.node.kubernetes.io/cpuid-AVX512DQ"
-              operator: "Exists"
-          - matchExpressions:
-            - key: "feature.node.kubernetes.io/cpuid-AVX512F"
-              operator: "Exists"
-          - matchExpressions:
-            - key: "feature.node.kubernetes.io/cpuid-AVX512VL"
-              operator: "Exists"
+    nodeSelector:
+      beta.kubernetes.io/instance-type: "${INSTANCE_TYPE}"
 - apiVersion: "v1"
   kind: "ImageStream"
   metadata:
@@ -58,9 +41,12 @@ parameters:
 - description: "ImageStream name"
   name: "IMAGESTREAM_NAME"
   from: '[A-Z0-9]{10}'
-  value: "tensorflow-fftw-rhel7-avx512"
+  value: "tensorflow-fftw-rhel7"
   required: true
 - description: "Registry route. Use `oc registry info` to get the route after exposing it."
   name: "REGISTRY"
   value: "image-registry.openshift-image-registry.svc:5000"
   required: true
+- description: "AWS instance type"
+  name: "INSTANCE_TYPE"
+  value: "m4.4xlarge"
