--- a/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx/job/cpu_manager/tensorflow-nfd-build-job.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx/job/cpu_manager/tensorflow-nfd-build-job.yaml
@@ -23,7 +23,7 @@ objects:
         - name: "${APP_NAME}"
           image: "${REGISTRY}/${NAMESPACE}/${IMAGESTREAM_NAME}:latest"
           command: ["/usr/libexec/s2i/run"]
-          args: ["${RHEL_VERSION}", "cpu", ""]
+          args: ["${RHEL_VERSION}", "cpu", "${NUM_CPUS}", "${CC}"]
         restartPolicy: "Never"
         affinity:
           nodeAffinity:
@@ -40,10 +40,10 @@ objects:
                   - true
         resources:
           requests:
-            cpu: "${N_CPUS}"
+            cpu: "${NUM_CPUS}"
             memory: "${MEMORY_SIZE}"
           limits:
-            cpu: "${N_CPUS}"
+            cpu: "${NUM_CPUS}"
             memory: "${MEMORY_SIZE}"
 parameters:
 - description: "ImageStream name"
@@ -70,10 +70,14 @@ parameters:
   value: "7"
   required: true
 - description: "Number of CPUs to use"
-  name: "N_CPUS"
+  name: "NUM_CPUS"
   value: "1"
   required: true
 - description: "Memory size"
   name: "MEMORY_SIZE"
   value: "1G"
+  required: true
+- description: "Path to gcc"
+  name: "CC"
+  value: "/usr/bin/gcc"
   required: true
