Updating playbooks and s2i script to use path to GCC's libs

--- a/TensorFlow/playbooks/TensorFlow_installation/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/play.yaml
@@ -37,6 +37,7 @@
 
     # Which GCC to use
     CC: '{{ cc | default("/usr/bin/gcc") }}'
+    GCC_LIBS: '{{ gcc_libs | default("/usr/lib64") }}'
 
   roles:
     # Setup NumPy and TensorFlow build folders
