--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
@@ -42,7 +42,7 @@
     cd {{ NUMPY_BUILD_DIR }}
     CC="{{ CC }} -lblas -lgfortran" python3 setup.py build_ext --build-lib fftw --fcompiler=gnu95
   environment:
-    LD_LIBRARY_PATH: '/usr/lib:/usr/lib64:/usr/lib64/atlas:/usr/local/lib'
+    LD_LIBRARY_PATH: '/usr/lib:/usr/lib64:/usr/lib64/atlas:/usr/local/lib:{{ GCC_LIBS }}'
   when: USE_FFTW == 'yes' and USE_OPENBLAS == 'no'
   register: numpy_fftw_log
 
@@ -63,7 +63,7 @@
     cd {{ NUMPY_BUILD_DIR }}
     CC="gcc -lblas -lgfortran" python3 setup.py build_ext --build-lib fftw --fcompiler=gnu95
   environment:
-    LD_LIBRARY_PATH: '/usr/lib:/usr/lib64:/usr/lib64/atlas'
+    LD_LIBRARY_PATH: '/usr/lib:/usr/lib64:/usr/lib64/atlas:{{ GCC_LIBS }}'
   when: USE_FFTW == 'no' and USE_OPENBLAS == 'yes'
   register: numpy_openblas_log
 
