Adding perl-Encode and perl-Data-Dumper since Texinfo requires them

--- a/misc/playbooks/texinfo_installer/play.yaml
+++ b/misc/playbooks/texinfo_installer/play.yaml
@@ -37,6 +37,8 @@
           - gcc-c++
           - make
           - perl
+          - perl-Data-Dumper
+          - perl-Encode
           - wget
         state: present
 
