--- a/misc/playbooks/glibc_installer/play.yaml
+++ b/misc/playbooks/glibc_installer/play.yaml
@@ -28,7 +28,7 @@
     makeinfo_executable: '{{ makeinfo | default("/usr/bin/makeinfo") }}'
 
     # For parallel builds
-    num_jobs: '{{ num_jobs | default("2") }}'
+    num_jobs: '{{ jobs | default("2") }}'
 
     # GNU mirror, which contains all the gnu packages. See https://www.gnu.org/prep/ftp.html for other mirrors. You shouldn't
     # need to change this value at all. However, you may need to change it if this default mirror is dead.
