For some reason, libm is not being built with 'make all', so this time it will be explicitly built

--- a/misc/playbooks/glibc_installer/play.yaml
+++ b/misc/playbooks/glibc_installer/play.yaml
@@ -109,6 +109,12 @@
         target: '-j{{ num_jobs }}'
         chdir: '{{ glibc_build_path }}/glibc-build'
 
+    # Make libm (since apparently it doesn't get built with 'make all')
+    - name: Make libm
+      make:
+        target: math
+        chdir: '{{ glibc_build_path }}/glibc-build'
+
     # Finally, install it
     - name: Install glibc
       make:
