--- a/misc/playbooks/glibc_installer/play.yaml
+++ b/misc/playbooks/glibc_installer/play.yaml
@@ -84,7 +84,7 @@
     # See more info here: https://patchwork.ozlabs.org/patch/987812
     - name: For glibc v2.30 and v2.29, fix test-installation.pl bug where test-installation.pl tries to add "-lnss_test2" to the compilation line, but "nss_test2" is an executable, not a library
       lineinfile:
-        path: '{{ glibc_build_path }}/glibc-2.30/scripts/test-installation.pl'
+        path: '{{ glibc_build_path }}/glibc-{{ glibc_version }}/scripts/test-installation.pl'
         regexp: '.*\&\& \$name ne "nss_test1".*'
         line: '        && $name ne "nss_test1" && $name ne "nss_test2" && $name ne "libgcc_s") {'
       when: glibc_version == "2.30" or glibc_version == "2.29"
@@ -92,7 +92,7 @@
     # libnsl is not being linked when the installation is being tested, so...
     - name: For glibc v2.30 and v2.29, fix test-installation.pl bug where libnsl is not being linked
       lineinfile:
-        path: '{{ glibc_build_path }}/glibc-2.30/scripts/test-installation.pl'
+        path: '{{ glibc_build_path }}/glibc-{{ glibc_version }}/scripts/test-installation.pl'
         regexp: '^\$link_libs.*'
         line: '$link_libs = "-lnsl";'
       when: glibc_version == "2.30" or glibc_version == "2.29"
