--- a/misc/playbooks/glibc_installer/play.yaml
+++ b/misc/playbooks/glibc_installer/play.yaml
@@ -114,3 +114,15 @@
       make:
         target: install
         chdir: '{{ glibc_build_path }}/glibc-build'
+
+    # For building NumPy, we have to create a symlink to {{ glibc_install_prefix }}/include/endian.h since NumPy has a bug (due to hardcoding)
+    - name: Create dummy {{ glibc_install_prefix }}/include/sys folder
+      file:
+        state: directory
+        path: '{{ glibc_install_prefix }}/include/sys'
+
+    - name: Create symlink to {{ glibc_install_prefix }}/include/endian.h
+      file:
+        state: link
+        src: '{{ glibc_install_prefix }}/include/endian.h'
+        dest: '{{ glibc_install_prefix }}/include/sys/endian.h'
